@@ -262,9 +262,10 @@ class Class :
         self.module = sys.modules.get(modname)
         if not self.module:
             self.module = module
-            sys.stderr.write("warning: couldn't find real module "
-                             "for class %s (module name: %s)\n"
-                             % (self.classObject, modname))
+            if modname not in cfg().blacklist:
+                sys.stderr.write("warning: couldn't find real module "
+                                 "for class %s (module name: %s)\n"
+                                 % (self.classObject, modname))
         self.ignoreAttrs = 0
         self.methods = {}
         self.members = { '__class__': types.ClassType,
